79/ Fixed artifact selection panel scrolling being hard capped and not dynamically changed depending on current artifact amount.
80/ Small fix toward buff missing texture and deleting no longer needed item localization.
81/ Removed Trinket of Ample Perception and made it into a artifact.
82/ Moved a variable from 1 global NPC class to main global NPC file and delete the unnecessary global class.
83/ Deleted Trinket6 ( Trinket of Mythical Conditioning ) because it is similar with Mana Overloader.
84/ Removed Trinket 6 and turn it into a augmentation with a lot of nerfs.
85/ Removed Trinket 5 and turn it into a mod skill.
86/ Added "Disable ring visual" into the configuration setting.
87/ Deleted Chaos Mode.
88/ Nerfed Hybrid Ranger perk.
89/ Deleted Lost In Wonderland perk.
90/ Reworked Trial System and how it functions.
91/ Deleted Weapon Dismantle because it is no longer needed.
92/ Various bug fixes, and fix a rounding error.
93/ Removed Pure Damage player stats from most relic template.
94/ Overall mod clean up.
95/ Deleted Nightmare Mode.
96/ Deleted damage reduction mutation.
97/ Merged Roguelike Overhaul with roguelike mode while still make it enable when player in Boss Rush mode.
98/ Slightly clean up Lootbox.
99/ Clean up the messes created by Merging Roguelike overhaul with roguelike mode.
100/ Added recharged animation for axe.
101/ If player releases LMB during axe recharge animation then the animation will be cancelled and player can attack right away.
102/ Added snow forest into world generation.
103/ Optimized Create_Biome codes for zone to be ignored using smarter chunk generation.
104/ Made small progress on Trial Archer.
105/ Added Trial tile for trial editor.
106/ Nerfed Sniper Rifle, no longer have 50% chance to 1 shot anything, now instead a 0.1% instead, hf.
107/ Significantly buff general shortsword.
108/ Implemented item variant system.
109/ Modify Artifact system to allow for starter item to be added.
110/ Added new Vampire Knives variant.