@@ -1,0 +1,13 @@
+﻿using Terraria;
+using Terraria.ID;
+
+namespace Roguelike.Contents.Items.Weapon.ItemVariant;
+public class SlimeStaff_Var1 : ModVariant {
+	public override void SetStaticDefaults() {
+		ItemType = ItemID.SlimeStaff;
+	}
+	public override void SetDefault(Item item) {
+		item.damage = 22;
+		item.mana = 0;
+	}
+}
