@@ -2,7 +2,11 @@
 using Roguelike.Common.Global;
 using Roguelike.Common.Systems.ArtifactSystem;
 using Roguelike.Common.Utils;
+using Roguelike.Contents.Items.Chest;
+using Roguelike.Contents.Items.RelicItem;
+using Roguelike.Contents.Perks;
 using Roguelike.Texture;
+using System.Collections.Generic;
 using Terraria;
 using Terraria.ModLoader;
 
@@ -11,6 +15,15 @@ namespace Roguelike.Contents.Transfixion.Artifacts;
 public class SmallLootBoxArtifact : Artifact {
 	public override Color DisplayNameColor => Color.Brown;
 	public override string TexturePath => ModTexture.Get_MissingTexture("Artifact");
+	public override IEnumerable<Item> AddStartingItems(Player player) {
+		yield return new Item(ModContent.ItemType<WorldEssence>());
+		yield return new Item(ModContent.ItemType<SkillLootBox>());
+		Item item = new Item(ModContent.ItemType<Relic>());
+		if (item.ModItem is Relic relic) {
+			relic.AutoAddRelicTemplate(player, 4);
+		}
+		yield return item;
+	}
 }
 public class SmallLootboxArtifactPlayer : ModPlayer {
 	bool SmallLootbox = false;
